--- a/book1.html
+++ b/book1.html
@@ -3,6 +3,12 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Book 1: Water</title>
+    <meta content="Book 1: Water" property="og:title" />
+    <meta content="Avatar The Last Airbender Book 1 episodes" property="og:description" />
+    <meta content="https://metrunui.github.io/book1.html" property="og:url" />
+    <meta content="https://metrunui.github.io/images/Water/android.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 <title>Book 1 Water</title>
 <link href="sokkastyles1.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/Water/favicon.ico">
