--- a/book2.html
+++ b/book2.html
@@ -4,6 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Book 2 Earth</title>
+<meta content="Book 2: Earth" property="og:title" />
+<meta content="Avatar The Last Airbender Book 2 episodes" property="og:description" />
+<meta content="https://metrunui.github.io/book2.html" property="og:url" />
+<meta content="https://metrunui.github.io/images/Earth/android.png" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+
 <link href="sokkastyles2.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/Earth/favicon.ico">
 <link rel="apple-touch-icon" href="images/Earth/apple-touch-icon.png">
