--- a/book3.html
+++ b/book3.html
@@ -4,6 +4,12 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Book 3 Fire</title>
+<meta content="Book 3: Fire" property="og:title" />
+<meta content="Avatar The Last Airbender Book 3 episodes" property="og:description" />
+<meta content="https://metrunui.github.io/book3.html" property="og:url" />
+<meta content="https://metrunui.github.io/images/Avatar/android.png" property="og:image" />
+<meta content="#43B581" data-react-helmet="true" name="theme-color" />
+
 <link href="sokkastyles.css" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" href="images/Avatar/favicon.ico">
 <link rel="apple-touch-icon" href="images/Avatar/apple-touch-icon.png">
