--- a/pokemon1.html
+++ b/pokemon1.html
@@ -73,382 +73,382 @@
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 7</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 8</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 9</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 10</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 11</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 12</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 13</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 14</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 15</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 16</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 17</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 18</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 19</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-		  <p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+		  <p></p>
 		  <h4>Episode 20</h4>
 		  <p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></iframe></p>
 			<h4>Episode 21</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 22</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 23</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 24</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 25</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 26</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 27</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 28</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 29</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 30</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 31</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 32</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 33</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 34</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 35</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 36</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 37</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 38</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 39</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 40</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 41</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 42</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 43</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 44</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 45</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 46</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 47</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 48</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 49</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 50</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 51</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 52</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 53</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 54</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 55</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 56</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 57</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 58</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 59</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 60</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 61</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 62</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 63</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 64</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 65</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 66</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 67</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 68</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 69</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 70</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 71</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 72</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 73</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 74</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 75</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 76</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 77</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 78</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 79</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 80</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 81</h4>
 			<p></p>
 		  </div>
 		  <div class="thumbnail">
-			<p><iframe src="" width="480" height="360" allowfullscreen="allowfullscreen"></iframe></p>
+			<p></p>
 			<h4>Episode 82</h4>
 			<p></p>
 		  </div>
