--- a/pokemon3.html
+++ b/pokemon3.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Season 1: Indigo League</title>
-<meta content="Season 1: Indigo League" property="og:title" />
-<meta content="Pokémon Season 1 episodes" property="og:description" />
-<meta content="https://metrunui.github.io/pokemon1.html" property="og:url" />
+<title>Season 3: Johto Journeys</title>
+<meta content="Season 3: Johto Journeys" property="og:title" />
+<meta content="Pokémon Season 3 episodes" property="og:description" />
+<meta content="https://metrunui.github.io/pokemon3.html" property="og:url" />
 <meta content="https://metrunui.github.io/images/Pokemon/android.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
@@ -43,32 +43,32 @@
 	<section>
 	  <h2 >Season 1</h2>
 		<div class="thumbnail">
-			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/YW4mUISA#ZjLmFIK7ddlRyIpupytyfFwbExBW6LT0t18K2Hz4Oxk" allowfullscreen ></iframe></p>
+			<p></p>
 			<h4>Episode 1</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/pfJGUZSS#DMispVWfXZu59IRZorK-YPB1CljX6_pFBF0B0RO7wII" allowfullscreen ></iframe></p>
+			<p></iframe></p>
 			<h4>Episode 2</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/wOwygTpa#PyguC23Q7T_5HYWk3lh48wTqZodbPwB3ImfHe_TE7Kc" allowfullscreen ></iframe></p>
+			<p></p>
 			<h4>Episode 3</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/lXoGkBIL#TViJe2AlTdlFKlcWj8Pm2J8VK9nDovJF4pO5KSRSrVU" allowfullscreen ></iframe></p>
+			<p></p>
 			<h4>Episode 4</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Vf4QUZYB#eY8bn6QFnt_pyivqHdO0J-QTDL3nQ2nqDLqU4WUxue4" allowfullscreen ></iframe></p>
+			<p></p>
 			<h4>Episode 5</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/VOwgDJ4Z#X4DfHbE5b5m7WyiQCmQASNkHgCk3gGDHTkJqW8qIdeU" allowfullscreen ></iframe></p>
+			<p></p>
 			<h4>Episode 6</h4>
 			<p></p>
 		</div>
@@ -245,211 +245,6 @@
 		<div class="thumbnail">
 			<p></p>
 			<h4>Episode 41</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 42</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 43</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 44</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 45</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 46</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 47</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 48</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 49</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 50</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 51</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 52</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 53</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 54</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 55</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 56</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 57</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 58</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 59</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 60</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 61</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 62</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 63</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 64</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 65</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 66</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 67</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 68</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 69</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 70</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 71</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 72</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 73</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 74</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 75</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 76</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 77</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 78</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 79</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 80</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 81</h4>
-			<p></p>
-		</div>
-		<div class="thumbnail">
-			<p></p>
-			<h4>Episode 82</h4>
 			<p></p>
 		</div>
     </section>
