--- a/pokemon3.html
+++ b/pokemon3.html
@@ -36,12 +36,12 @@
   </section>
   <!-- Banner Section -->
   <section class="banner">
-	<h2 >Indigo League Episodes</h2>
+	<h2 >Johto Journeys Episodes</h2>
 	<div>
 	</div>
 	<div>
 	<section>
-	  <h2 >Season 1</h2>
+	  <h2 >Season 3</h2>
 		<div class="thumbnail">
 			<p></p>
 			<h4>Episode 1</h4>
