--- a/pokemon1.html
+++ b/pokemon1.html
@@ -73,12 +73,12 @@
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Ueg1UQxJ#aFxAso7sYD-UVG5zVdp1m7sJsB98xJ_7qL0PabVdtUk" allowfullscreen ></iframe></p>
 			<h4>Episode 7</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/8ShDWAQC#1Ol6jA5HdSexnmeLtSVeZHZN_3EXu_eLiKB5dxkO4F4" allowfullscreen ></iframe></p>
 			<h4>Episode 8</h4>
 			<p></p>
 		</div>
