--- a/pokemon1.html
+++ b/pokemon1.html
@@ -83,22 +83,22 @@
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/BPgWkSIb#aA7Kee4ShPjSC-1RwPfI8bhoIsr0QjJPZU8x2l87fQE" allowfullscreen ></iframe></p>
 			<h4>Episode 9</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/gW5GRAJQ#xfoOYiyQPPOEzW55ihu2h532Gs5UnFsTOdDLRavT16I" allowfullscreen ></iframe></p>
 			<h4>Episode 10</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/BGoBmCTJ#XEEWi7ftPQAfloSRm15cavkq69LlOIFAbLV-6dXEKxQ" allowfullscreen ></iframe></p>
 			<h4>Episode 11</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/kKxEXCTB#vSkCzDoftWXw-P_4qMVeQcdMvddOQ2qRAL1K9jpBWtM" allowfullscreen ></iframe></p>
 			<h4>Episode 12</h4>
 			<p></p>
 		</div>
