--- a/pokemon1.html
+++ b/pokemon1.html
@@ -103,152 +103,152 @@
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/5OBD3SyL#o3gT0lfZVXFDtegH1AynSQKhYNKoH-ocjMRKiYidoZc" allowfullscreen ></iframe></p>
 			<h4>Episode 13</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/wCg0gQBL#Ixj0I96_63rJoBQXp2GI3d3dNdyxeWrcZsQlZdzGRl0" allowfullscreen ></iframe></p>
 			<h4>Episode 14</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/waoCXKaa#qarcPahW91ndeOWvVwe2jtTz2rF4GkR3rUIwIHzi9eU" allowfullscreen ></iframe></p>
 			<h4>Episode 15</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/gWoSGaqS#HiVHXQCoDaSg3HHT9zihfcByh2ZKWSA8pSII7cVE7_8" allowfullscreen ></iframe></p>
 			<h4>Episode 16</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/hSg2FC6K#CxHuT4K490dp9EG6VjtnoqmkMlzS-bzbexVVyX2yVXI" allowfullscreen ></iframe></p>
 			<h4>Episode 17</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/ta4SlSDR#CyCsBUzC99iN4tju4YXM2IrQEBWuaz95IqlefeMmeXs" allowfullscreen ></iframe></p>
 			<h4>Episode 18</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/UHxiSILZ#XA3jgLin-NEM0ORFOIEvoqSwH1DLOsQANkEy0bozbZA" allowfullscreen ></iframe></p>
 			<h4>Episode 19</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/1P4EWQpb#zHdGrjRgA36fFskilsjJNsgb62iuWE7F-fm7tEmfM78" allowfullscreen ></iframe></p>
 			<h4>Episode 20</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/sOgAiazS#JUh4KcK9_wCdHtlcTWBROgYv8FqLW6YBWdmoha1fKgA" allowfullscreen ></iframe></p>
 			<h4>Episode 21</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/FexEVKjD#zM8LUKL1LVRJGgPmQVF3UpjhEGRCYEm_zABJGC8y0nk" allowfullscreen ></iframe></p>
 			<h4>Episode 22</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/MLAVCAAa#7u7xz0BKwsSp7ScLkLyy3VwFzAg_KXygP8yabTfAJy0" allowfullscreen ></iframe></p>
 			<h4>Episode 23</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/9bA1VIBb#lRHaym9MokhnzNtN9fJDGkg4rm8UMUtD7Ah2YMVRtf8" allowfullscreen ></iframe></p>
 			<h4>Episode 24</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/MbQXEaIa#crSu5_cbAtp0a_ZSKYcwEKpAEO-URuu60v_vD0Z2c5Q" allowfullscreen ></iframe></p>
 			<h4>Episode 25</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/5fhwzArC#X4EUyLMlVvtmZ5JTeXtdJgFMNS_vfUOru8fHqOFd9x0" allowfullscreen ></iframe></p>
 			<h4>Episode 26</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/5Tp2naZJ#3mCYpwE8C8fiKF2tviDHOxluXTgTLeezE8wlm29SzzA" allowfullscreen ></iframe></p>
 			<h4>Episode 27</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/UPQhUCxD#1PDAyoVHv9IaPyGu0110eqnmAjNEnkcKpA08OigG6-U" allowfullscreen ></iframe></p>
 			<h4>Episode 28</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/sOhCnYCD#DqzNLjWfnet4XLyY33t-cxURmIM3u53Dwrs4OXVNJTA" allowfullscreen ></iframe></p>
 			<h4>Episode 29</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/4b5wiIhQ#BB3cVF9HoGOHwy3c0nOtK1hCjXzzWPkGzWfftcsE7R0" allowfullscreen ></iframe></p>
 			<h4>Episode 30</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/tT421KRQ#OSFN0eU_9zYVuvqMPsHifhiz2WvkezxkiPOe088G77U" allowfullscreen ></iframe></p>
 			<h4>Episode 31</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/1OhiiIwL#UZ0UI_rzrxoxp6fk92yzGhaKX4jScOpVmRBB_CwixfQ" allowfullscreen ></iframe></p>
 			<h4>Episode 32</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/taYjXASR#4HIPacS0qV4jt5nXcEMSDijh6nsNnA104CspBD56nHw" allowfullscreen ></iframe></p>
 			<h4>Episode 33</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/JCQXDKTJ#2FnDICHiB00YJohFPDQooXwNdqX_cH0Dv0wJNf4rUFM" allowfullscreen ></iframe></p>
 			<h4>Episode 34</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/VeQV2ALC#gBrq1cGKwGm53ibIXoG9h--fuZcLnlrrGBjLiu4EVXM" allowfullscreen ></iframe></p>
 			<h4>Episode 35</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/BS5mBaCA#IoDLjogUxB_0hP-_xL4-cSbUKzrCJ_2ACIZGvRuTrNo" allowfullscreen ></iframe></p>
 			<h4>Episode 36</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/dTh01YDa#TWT3Md_3g6Uw_7vD2JZU2RRvlwyXTCCgoDK5tJwHKHk" allowfullscreen ></iframe></p>
 			<h4>Episode 37</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/UfoiWCiQ#ogzF4rSq8ZX1uTY_9wGYhQDdodyGRqN180Mc8zbdFZc" allowfullscreen ></iframe></p>
 			<h4>Episode 38</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/1epi3CwI#7nraguWP37VxWFaOVxB8RioyzhgH4_b5JFy9gPZjY70" allowfullscreen ></iframe></p>
 			<h4>Episode 39</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/FXYHxQ4A#ejWGTzqiiUvmXQV7K47aqfp9Kxm9-gB_W5qZmeTXUAQ" allowfullscreen ></iframe></p>
 			<h4>Episode 40</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/sWJDBIaL#q3_OCUd80qJHa96EDnG6HtLb0QWOMKCeRuEnIeOIKmU" allowfullscreen ></iframe></p>
 			<h4>Episode 41</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/0H5WEKiL#Uw2R7V3nMHfdvItC8Evf1sE_--ZILA4Ly0i370R8Z-E" allowfullscreen ></iframe></p>
 			<h4>Episode 42</h4>
 			<p></p>
 		</div>
