--- a/pokemon1.html
+++ b/pokemon1.html
@@ -253,172 +253,172 @@
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/5ThAhIZZ#sI5l0Vq_3nqyIGHiKfo2OUgs4i4nW_QvT5V3yatxk9w" allowfullscreen ></iframe></p>
 			<h4>Episode 43</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/RPhUxILY#g1j9It9NWw1oagFA8nnBIqRMemLY4RmIhqhx-_MWJHo" allowfullscreen ></iframe></p>
 			<h4>Episode 44</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/EGIlkaCS#NwWLd1Wape0f5Y7bAtoSkLsMEsmgRixfrnWQG66G7Sk" allowfullscreen ></iframe></p>
 			<h4>Episode 45</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/hfogAILY#tPmBUEvROK19ODQXRFgHEQPlGdEej0DpuMGqjUUqNCs" allowfullscreen ></iframe></p>
 			<h4>Episode 46</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Rbog1ITY#jrIyhsdB6zZh7LROtDqFdsRyZEHvzNZ0rHaqlizc6yQ" allowfullscreen ></iframe></p>
 			<h4>Episode 47</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/NeAzQKQI#HKF0oyYHCHeftTfr5_Bp2kme3nlX4YKmRPeZl5R-SKU" allowfullscreen ></iframe></p>
 			<h4>Episode 48</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/ZboQiLoK#SwKUw6YZc6FJD89V-nNOqxHyke5wBSJ4xii9amdc2kQ" allowfullscreen ></iframe></p>
 			<h4>Episode 49</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/MPg0EbiB#DtZea-Agogr8hf_jPXu0LZHqidWRhA6i3zcD4gy8QJA" allowfullscreen ></iframe></p>
 			<h4>Episode 50</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/kbpU0JCZ#21SUamsS0D-usQ5pbDlwLEO-jHKqDRl5dcvI5twY0Xo" allowfullscreen ></iframe></p>
 			<h4>Episode 51</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/0Ho2CRgT#ScFPu-4Esg5_tea5AtdFZ1Hr36n3WptCrrypWbTRMY8" allowfullscreen ></iframe></p>
 			<h4>Episode 52</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/keokwJIB#bZg5_EtYd-fsFcZj6pfsCss6nXr0kyKjgtWsNgPqVl4" allowfullscreen ></iframe></p>
 			<h4>Episode 53</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/ES4iXQhL#8A12VttS3KDx6-6DPGTPmzuonlYyFNwM6lXgWCKwVvI" allowfullscreen ></iframe></p>
 			<h4>Episode 54</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/5L4i1RLL#qpveh6Cw3NWFGlq8rX-elGALlmMS9aYQh2tXDU-RqQ0" allowfullscreen ></iframe></p>
 			<h4>Episode 55</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/tfoSmQwR#MDhLTxpiFrHX0hrMIthBXn0cDsp3ekhhjwYVEBpQ8zw" allowfullscreen ></iframe></p>
 			<h4>Episode 56</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/IXok1aiT#eWv5psQ3Wvw1n4VIrBvxhcPVVlenPUeRWExW3zaKmrI" allowfullscreen ></iframe></p>
 			<h4>Episode 57</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/1C521ZqJ#0i4F9tLaepMgkoNKpy3CExtEhIrE447_hRJ9EP3TdJQ" allowfullscreen ></iframe></p>
 			<h4>Episode 58</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/ELogjKKb#6B-8lcGCEggHDEOqvQsKUiqn-68Mrh-aLQW9-tR47Bk" allowfullscreen ></iframe></p>
 			<h4>Episode 59</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/VSwCTDyB#e30xqATflXVZHcVFmmmCjMVKZ6xJ_1xuwcpXY-zEwpQ" allowfullscreen ></iframe></p>
 			<h4>Episode 60</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/xPx21IyZ#RQOBj3WM4a9_HufohPQaJQKknDa4uY3TgE5jecNSKIQ" allowfullscreen ></iframe></p>
 			<h4>Episode 61</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/4S4QFSJQ#-LYD61eSIXi_BrfIaa2s86AVfZUwekcx_REcfA-eOmY" allowfullscreen ></iframe></p>
 			<h4>Episode 62</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/0KoA0D7Y#rck7FnPcPpzAUiwMpJt7WpumXnaDvpzywGgi6dfxfAU" allowfullscreen ></iframe></p>
 			<h4>Episode 63</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/saokCZIB#1tkOLiQyjm6aXGXUAxMq0GQohJOVk2r3lfMQASfC9aw" allowfullscreen ></iframe></p>
 			<h4>Episode 64</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/wahAxD4J#rcxMiTrvD0syBDTSBFjtVdm3Q0SqthkV9KXfrq6o_ss" allowfullscreen ></iframe></p>
 			<h4>Episode 65</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/QLxykDyR#Qb7TrHishuVs6c6R1BvplUOQQPHaXL8w8IkD6hY5W2U" allowfullscreen ></iframe></p>
 			<h4>Episode 66</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Ubp0AR7B#_a-6Wzk5dyZOuIIKSFY8ASrZaz9xp0eDsDu91noECbA" allowfullscreen ></iframe></p>
 			<h4>Episode 67</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/BexA2QjK#AYY2Y1jDN3LsEOcca3EHeOLT-HTa1FyNr09veU49szQ" allowfullscreen ></iframe></p>
 			<h4>Episode 68</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/dDxkCR6Z#-koUUnfy9bx7Io8t09Bs0lWQvfbyUMw0Egm5czhQKpI" allowfullscreen ></iframe></p>
 			<h4>Episode 69</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/taoERDjL#Fudu-Ct2rjXnSStOgP7Tszxjk8s6gSPSZYHXKJr92Bc" allowfullscreen ></iframe></p>
 			<h4>Episode 70</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Ma5ClZqa#cZJ7f5DNJyxXtSBJ7pzO217uJ92eOHN4xKLTNVYckPw" allowfullscreen ></iframe></p>
 			<h4>Episode 71</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/FToglSAb#6qebaJPMplrIob6EkpWE8R1NGbVeI17K7gsABRqIJeA" allowfullscreen ></iframe></p>
 			<h4>Episode 72</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/AGoyBAiB#0tnuT0Vmn0DBEreKJU-zX9OMHlQLLb0S2wb8wW0MNlY" allowfullscreen ></iframe></p>
 			<h4>Episode 73</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/wThQSbBQ#fTAiyeC_86TysCyZF8Frh8kAzgL2gGPr9TEdwhEA8dw" allowfullscreen ></iframe></p>
 			<h4>Episode 74</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/JKgySZBb#sV-W51SQA0i9F1HaAo2pWSIQKKsLKSTycju00FBUNpw" allowfullscreen ></iframe></p>
 			<h4>Episode 75</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/ACwUSZaJ#psPPfq44bwEdhzpd44U7rGjM5fVNFH-Mn8tN19uHho8" allowfullscreen ></iframe</p>
 			<h4>Episode 76</h4>
 			<p></p>
 		</div>
