--- a/pokemon1.html
+++ b/pokemon1.html
@@ -418,37 +418,37 @@
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p><iframe width="640" height="360" frameborder="0" src="https://mega.nz/embed/ACwUSZaJ#psPPfq44bwEdhzpd44U7rGjM5fVNFH-Mn8tN19uHho8" allowfullscreen ></iframe</p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/ACwUSZaJ#psPPfq44bwEdhzpd44U7rGjM5fVNFH-Mn8tN19uHho8" allowfullscreen ></iframe</p>
 			<h4>Episode 76</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/Qe4iHbYY#soxO6zxUUtz68c3Q9k-hycpsSSQilLmIpS5rCc6dQZo" allowfullscreen ></iframe></p>
 			<h4>Episode 77</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/gPokHZoa#ikr-DrBYFjnMxKCniQiwHlqgwAiW9UlfmQqxndgLSWs" allowfullscreen ></iframe></p>
 			<h4>Episode 78</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/gO4wGZgR#8txQPIyqdwrH5v0wkcTzOdEub1SvIDX2lEje7awyfmE" allowfullscreen ></iframe></p>
 			<h4>Episode 79</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/oSomlZjL#hkAPp1wBiQdDfM3lA4fU74aoGDUUJb3VfZNg5WfKq2c" allowfullscreen ></iframe></p>
 			<h4>Episode 80</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/RegiiQbA#3GeJFVryJJvs2VbWXLf3YqqCIsmw1h2mCJ2cBzjKV74" allowfullscreen ></iframe></p>
 			<h4>Episode 81</h4>
 			<p></p>
 		</div>
 		<div class="thumbnail">
-			<p></p>
+			<p><iframe width="480" height="360" frameborder="0" src="https://mega.nz/embed/sCxAUYBZ#Pif6Er2H4MS5EiGyPnC9AOr-vCZvtO02x_YAGBgBcUE" allowfullscreen ></iframe></p>
 			<h4>Episode 82</h4>
 			<p></p>
 		</div>
